--- a/my-portfolio/src/components/Navbar/styles.scss
+++ b/my-portfolio/src/components/Navbar/styles.scss
@@ -71,13 +71,13 @@
     transition: all 0.5s ease;
 
     &.active {
-      background: #181818;
+      background: #696969;
       left: 0px;
       opacity: 1;
     }
 
     &__item {
-      border-bottom: 1px solid #1d1d1d;
+      border-bottom: 1px solid #000000;
       margin: 0px;
       padding: 20px 0px;
     }
