--- a/my-portfolio/src/containers/portfolio/styles.scss
+++ b/my-portfolio/src/containers/portfolio/styles.scss
@@ -103,6 +103,34 @@
   }
 }
 
+@media only screen and (max-width: 480px) {
+  .portfolio__content__filter > li {
+    font-size: 11px;
+  }
+
+  .portfolio__content__cards {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media only screen and (max-width: 481px) and (max-width: 767px) {
+  .portfolio__content__filter > li {
+    font-size: 14px;
+  }
+
+  .portfolio__content__cards {
+    grid-template-columns: repeat(2, 1fr);
+
+    &__item {
+      .overlay {
+        div > p {
+          font-size: 2.5rem;
+        }
+      }
+    }
+  }
+}
+
 @keyframes typingEffect {
   from {
     width: 0;
