--- a/my-portfolio/src/containers/portfolio/styles.scss
+++ b/my-portfolio/src/containers/portfolio/styles.scss
@@ -66,7 +66,7 @@
         width: 100%;
         opacity: 0;
         transition: 0.5s ease;
-        background-color: var(--blue-theme-main-color);
+        background-color: rgba(0, 0, 0, 0.5);
 
         div {
           position: absolute;
@@ -74,7 +74,6 @@
           left: 50%;
           transform: translate(-50%, -50%);
           text-align: center;
-          object-fit: contain;
 
           p {
             color: #ffffff;
@@ -113,7 +112,7 @@
   }
 }
 
-@media only screen and (max-width: 481px) and (max-width: 767px) {
+@media only screen and (min-width: 481px) and (max-width: 767px) {
   .portfolio__content__filter > li {
     font-size: 14px;
   }
