Setting and connecting my email with my contact form using Emailjs

--- a/my-portfolio/src/components/Navbar/styles.scss
+++ b/my-portfolio/src/components/Navbar/styles.scss
@@ -66,18 +66,50 @@
     width: 100%;
     position: absolute;
     top: 80px;
-    left: -100%;
+    left: -110%;
     opacity: 1;
     transition: all 0.5s ease;
 
     &.active {
-      background: #696969;
+      background: #181818;
       left: 0px;
       opacity: 1;
     }
 
     &__item {
-      border-bottom: 1px solid #000000;
+      border-bottom: 1px solid #282828;
+      margin: 0px;
+      padding: 20px 0px;
+    }
+  }
+
+  .nav-icon {
+    display: block;
+    cursor: pointer;
+    color: var(--yellow-theme-main-color);
+    padding-right: 20px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .navbar__container__menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    position: absolute;
+    top: 80px;
+    left: -110%;
+    opacity: 1;
+    transition: all 0.5s ease;
+
+    &.active {
+      background: #181818;
+      left: 0px;
+      opacity: 1;
+    }
+
+    &__item {
+      border-bottom: 1px solid #282828;
       margin: 0px;
       padding: 20px 0px;
     }
